--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,7 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 21.5.0
+        cache: 'npm'
     - name: Build
       run: |
         npm install
